--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "^4.9.7"
   },
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "browser-sync": "^1.5.8",
+    "gulp": "^3.8.8",
+    "gulp-nodemon": "^1.0.4"
   }
 }
