--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "gulp-uglify": "^1.0.1",
     "jsdoc": "^3.3.0-alpha9",
     "jshint-stylish": "^1.0.0"
-  }
+  },
+  "scripts": {
+    "start": "gulp start",
+    "test": "gulp test"
+  },
 }
