--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.9.7"
   },
   "devDependencies": {
+    "bower": "^1.3.12",
     "browser-sync": "^1.5.8",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.4.1",
