--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "semantic": "~0.19.3",
-    "three.js": "*"
+    "three.js": "*",
+    "github-fork-ribbon-css": "~0.1.1"
   }
 }
