--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "name": "AmberElk",
   "description": "Into the deep",
   "version": "0.0.1",
-  "dependencies": {
-    "express": "^4.9.7"
-  },
   "devDependencies": {
     "bower": "^1.3.12",
     "browser-sync": "^1.5.8",
+    "express": "^4.9.7",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.4.1",
     "gulp-cssmin": "^0.1.6",
@@ -17,12 +15,13 @@
     "gulp-mocha": "^1.1.1",
     "gulp-nodemon": "^1.0.4",
     "gulp-rename": "^1.2.0",
+    "gulp-rimraf": "^0.1.1",
     "gulp-uglify": "^1.0.1",
     "jsdoc": "^3.3.0-alpha9",
     "jshint-stylish": "^1.0.0"
   },
   "scripts": {
     "start": "gulp start",
-    "test": "gulp test"
+    "test": "gulp deploy"
   }
 }
