--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "semantic": "~0.19.3",
     "three.js": "*",
     "github-fork-ribbon-css": "~0.1.1",
-    "firebase": "~1.1.2"
+    "firebase": "~1.1.2",
+    "jquery": "~2.1.1"
   }
 }
