--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gulp-rimraf": "^0.1.1",
     "gulp-uglify": "^1.0.1",
     "jsdoc": "^3.3.0-alpha9",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "chai": "^1.9.2",
+    "mocha": "^1.21.5"
   },
   "scripts": {
     "start": "gulp start",
