--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "browser-sync": "^1.5.8",
+    "chai": "^1.9.2",
     "express": "^4.9.7",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.4.1",
@@ -19,8 +20,20 @@
     "gulp-uglify": "^1.0.1",
     "jsdoc": "^3.3.0-alpha9",
     "jshint-stylish": "^1.0.0",
-    "chai": "^1.9.2",
-    "mocha": "^1.21.5"
+    "karma": "^0.12.24",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-coverage": "^0.2.6",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-mocha": "^0.1.9",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
+    "karma-sinon-chai": "^0.2.0",
+    "mocha": "^1.21.5",
+    "phantomjs": "^1.9.11",
+    "requirejs": "^2.1.15",
+    "sinon": "^1.10.3",
+    "sinon-chai": "^2.6.0"
   },
   "scripts": {
     "start": "gulp start",
