--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sauce-launcher": "^0.2.10",
     "karma-sinon-chai": "^0.2.0",
     "mocha": "^1.21.5",
     "phantomjs": "^1.9.11",
