--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: node_js
 node_js:
 - '0.10'
 before_install:
-- "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
 install:
 - npm install -g bower
 - npm install
 - bower install
+addons:
+  sauce_connect: true
 env:
   global:
     - secure: Eq1wk0NedKtABoJsT1plBtgXGU2+At5/dtKzge1GJI1hbJIOhiun17e51bO7xSd49DkOOyyI6aHP+zVC01HctaIuqJ27NrnOdan62XO+cF9JdErZ3vWF2r1mwy88uIhxuKEuYwlI4X4weNEJ5Eln0hmt6uheDpBpuXJ1/Q37deo=
