--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-nodemon": "^1.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-rimraf": "^0.1.1",
+    "gulp-sourcemaps": "^1.2.4",
     "gulp-uglify": "^1.0.1",
     "jsdoc": "^3.3.0-alpha9",
     "jshint-stylish": "^1.0.0",
