fixes three.js version in bower.json, with updates to gulpfile.js; adds post-processing

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "semantic": "~0.19.3",
-    "three.js": "*",
+    "threejs": "*",
     "github-fork-ribbon-css": "~0.1.1",
     "firebase": "~1.1.2",
     "jquery": "~2.1.1"
